Fix empty space issue between sidebar title and collapse icon for Library

--- a/src/demo/demo-components/DemoLibrary/DemoLibrary.css
+++ b/src/demo/demo-components/DemoLibrary/DemoLibrary.css
@@ -1,39 +1,39 @@
 .DemoLibrary {
-  display: flex;
-  flex-direction: column;
-  padding: 2vmin 2vmin;
-  width: 100%;
-  background-color: #f5faf9;
-  color: black;
-  margin-top: 2vmin;
+    display: flex;
+    flex-direction: column;
+    padding: 3vmin 3vmin;
+    width: 100%;
+    background-color: #f5faf9;
+    color: black;
+    margin-top: 1rem;
 }
 
 .demo-library-arrowBack:hover {
-  background-color: var(--light);
-  border-radius: 0.7vmin;
-  cursor: pointer;
+    background-color: var(--light);
+    border-radius: 0.7vmin;
+    cursor: pointer;
 }
 
 .demo-library-header-container {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 .demo-library-sidebar-heading {
-  text-align: left;
-  font-size: 1.5rem;
+    text-align: left;
+    font-size: 1.75rem;
 }
 
 .demo-library-subtext {
-  text-align: left;
-  margin-top: 2vmin;
+    text-align: left;
+    margin-top: 2vmin;
 }
 
 .demo-library-currently-reading-container,
 .demo-library-bookshelf-container {
-  text-align: left;
-  color: #006769;
+    text-align: left;
+    color: #006769;
 }
 
 .demo-library-currently-reading-container {
-  margin-top: 2vmin;
+    margin-top: 2vmin;
 }
